ERG-#41 - refactor user authentication

--- a/src/Resources/config/routes.yml
+++ b/src/Resources/config/routes.yml
@@ -1,4 +1,4 @@
 ergonode_authentication_api:
     resource: '../../Application/Controller/Api/*'
-    type: annotation
-    prefix: /
+    type: 'annotation'
+    prefix: '/'
