--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": "^7.2",
         "doctrine/dbal": "^2.9",
         "doctrine/orm": "^2.6",
-        "ergonode/core": "^0.2.0",
+        "ergonode/api": "^0.4.0",
+        "ergonode/core": "^0.4.0",
         "friendsofsymfony/rest-bundle": "^2.5",
         "jms/serializer": "^3.1",
         "nelmio/api-doc-bundle": "^3.4",
