--- a/composer.json
+++ b/composer.json
@@ -13,16 +13,17 @@
     },
     "require": {
         "php": "^7.4",
-        "doctrine/dbal": "^2.9",
+        "doctrine/dbal": "^2.10",
         "doctrine/orm": "^2.6",
-        "ergonode/account": "^0.6.0",
-        "ergonode/api": "^0.6.0",
-        "ergonode/core": "^0.6.0",
-        "jms/serializer": "^3.1",
+        "ergonode/account": "^0.7.0",
+        "ergonode/api": "^0.7.0",
+        "ergonode/core": "^0.7.0",
+        "ergonode/shared-kernel": "^0.7.0",
+        "jms/serializer": "^3.4",
         "lexik/jwt-authentication-bundle": "^2.6",
         "nelmio/api-doc-bundle": "^3.4",
         "ramsey/uuid": "^3.8",
-        "sensio/framework-extra-bundle": "^5.4",
+        "sensio/framework-extra-bundle": "^5.5",
         "symfony/form": "^4.4",
         "symfony/messenger": "^4.4",
         "symfony/translation": "^4.4",
