--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,10 @@
         "php": "^7.4",
         "doctrine/dbal": "^2.10",
         "doctrine/orm": "^2.6",
-        "ergonode/account": "^0.10.0",
-        "ergonode/api": "^0.10.0",
-        "ergonode/core": "^0.10.0",
-        "ergonode/shared-kernel": "^0.10.0",
+        "ergonode/account": "^1.0.0-beta",
+        "ergonode/api": "^1.0.0-beta",
+        "ergonode/core": "^1.0.0-beta",
+        "ergonode/shared-kernel": "^1.0.0-beta",
         "jms/serializer": "^3.4",
         "lexik/jwt-authentication-bundle": "^2.6",
         "nelmio/api-doc-bundle": "^3.6",
