--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,11 @@
         "php": "^7.4",
         "doctrine/dbal": "^2.10",
         "doctrine/orm": "^2.6",
-        "ergonode/account": "^1.0.0-beta",
-        "ergonode/api": "^1.0.0-beta",
-        "ergonode/core": "^1.0.0-beta",
-        "ergonode/shared-kernel": "^1.0.0-beta",
+        "ergonode/account": "^1.0.0-beta.2",
+        "ergonode/api": "^1.0.0-beta.2",
+        "ergonode/core": "^1.0.0-beta.2",
+        "ergonode/shared-kernel": "^1.0.0-beta.2",
+        "gesdinet/jwt-refresh-token-bundle": "^0.9.1",
         "jms/serializer": "^3.4",
         "lexik/jwt-authentication-bundle": "^2.6",
         "nelmio/api-doc-bundle": "^3.6",
