--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -6,3 +6,6 @@ services:
 
     Ergonode\Authentication\Application\Security\:
         resource: '../../Application/Security/*'
+
+    Ergonode\Authentication\Application\Middleware\:
+        resource: '../../Application/Middleware/*'
