--- a/composer.json
+++ b/composer.json
@@ -19,16 +19,16 @@
         "ergonode/api": "^1.0.0-beta.9",
         "ergonode/core": "^1.0.0-beta.9",
         "ergonode/shared-kernel": "^1.0.0-beta.9",
-        "gesdinet/jwt-refresh-token-bundle": "^0.9.1",
+        "gesdinet/jwt-refresh-token-bundle": "^0.9.1|^0.10",
         "jms/serializer": "^3.4",
         "lexik/jwt-authentication-bundle": "^2.6",
         "nelmio/api-doc-bundle": "^3.6",
         "ramsey/uuid": "^3.8",
         "sensio/framework-extra-bundle": "^5.5",
-        "symfony/form": "^4.4",
+        "symfony/form": "^4.4.11",
         "symfony/messenger": "^4.4",
         "symfony/translation": "^4.4",
-        "symfony/validator": "^4.4",
+        "symfony/validator": "^4.4.11",
         "vich/uploader-bundle": "^1.10"
     },
     "require-dev": {
