--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,6 @@
     "require": {
         "php": "^7.4",
         "doctrine/dbal": "^2.10",
-        "doctrine/orm": "^2.6",
         "ergonode/account": "^1.0.0-beta.9",
         "ergonode/api": "^1.0.0-beta.9",
         "ergonode/core": "^1.0.0-beta.9",
@@ -33,6 +32,9 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9"
+    },
+    "conflict": {
+        "doctrine/persistence": "<1.3"
     },
     "autoload": {
         "psr-4": {
