build(authentication) Updated gesdinet/jwt-refresh-token-bundle (#1241)

--- a/src/Resources/config/gesdinet_jwt_refresh_token.yaml
+++ b/src/Resources/config/gesdinet_jwt_refresh_token.yaml
@@ -1,2 +1,3 @@
 gesdinet_jwt_refresh_token:
     object_manager: Ergonode\Authentication\Application\RefreshToken\Doctrine\RefreshTokenManager
+    doctrine_mappings: false
