--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "ergonode/api": "^1.0.0-beta.9",
         "ergonode/core": "^1.0.0-beta.9",
         "ergonode/shared-kernel": "^1.0.0-beta.9",
-        "gesdinet/jwt-refresh-token-bundle": "^0.9.1|^0.10",
+        "gesdinet/jwt-refresh-token-bundle": "^0.11.1",
         "jms/serializer": "^3.4",
         "lexik/jwt-authentication-bundle": "^2.6",
         "nelmio/api-doc-bundle": "^3.6",
