--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,10 @@
     "require": {
         "php": "^7.4",
         "doctrine/dbal": "^2.10",
-        "ergonode/account": "^1.0.0-beta.9",
-        "ergonode/api": "^1.0.0-beta.9",
-        "ergonode/core": "^1.0.0-beta.9",
-        "ergonode/shared-kernel": "^1.0.0-beta.9",
+        "ergonode/account": "^1.0.0-rc.1",
+        "ergonode/api": "^1.0.0-rc.1",
+        "ergonode/core": "^1.0.0-rc.1",
+        "ergonode/shared-kernel": "^1.0.0-rc.1",
         "gesdinet/jwt-refresh-token-bundle": "^0.11.1",
         "jms/serializer": "^3.4",
         "lexik/jwt-authentication-bundle": "^2.6",
