--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,10 @@
     "require": {
         "php": "^7.4",
         "doctrine/dbal": "^2.10",
-        "ergonode/account": "^1.0.0-rc.2",
-        "ergonode/api": "^1.0.0-rc.2",
-        "ergonode/core": "^1.0.0-rc.2",
-        "ergonode/shared-kernel": "^1.0.0-rc.2",
+        "ergonode/account": "^1.0.0",
+        "ergonode/api": "^1.0.0",
+        "ergonode/core": "^1.0.0",
+        "ergonode/shared-kernel": "^1.0.0",
         "gesdinet/jwt-refresh-token-bundle": "^0.11.1",
         "lexik/jwt-authentication-bundle": "^2.6",
         "nelmio/api-doc-bundle": "^3.6",
