--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "ergonode/account": "^1.1.0",
         "ergonode/core": "^1.1.0",
         "ergonode/shared-kernel": "^1.1.0",
-        "gesdinet/jwt-refresh-token-bundle": "^0.11.1",
+        "gesdinet/jwt-refresh-token-bundle": "^0.11.1|^0.12",
         "lexik/jwt-authentication-bundle": "^2.6",
         "nelmio/api-doc-bundle": "^3.6",
         "ramsey/uuid": "^3.8",
